# overleaf_mcp

./: .gitignore  .graphify_ast.json  .graphify_detect.json  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  Makefile  README.md  graphify_uncached.txt  manifest.json  pyproject.toml
.github/: release.yml
.github/workflows/: ci.yml  release.yml
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  Makefile  OPTIMIZATION_PLAN.md  OPTIMIZATION_PLAN_V2.md  make.bat
docs/source/: architecture.rst  changelog.rst  client_setup.rst  conf.py  configuration.rst  development.rst  environment.rst  index.rst  installation.rst  quickstart.rst  tools.rst  usage.rst
docs/source/api/: config.rst  git_ops.rst  index.rst  latex.rst  server.rst  tools.rst
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
mcpb/: bootstrap.py  build-mcpb.sh
src/overleaf_mcp/: __init__.py  config.py  git_ops.py  latex.py  server.py  tools.py
tests/: test_coverage_gaps.py  test_dispatcher.py  test_mcpb_bundle.py  test_optimizations.py  test_server.py  test_server_transport.py
