[project]
name = "overleaf-mcp"
version = "1.1.0"
description = "MCP server for Overleaf with full CRUD operations"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Overleaf MCP", email = "noreply@example.com"}
]
dependencies = [
    "mcp>=1.0.0",
    "gitpython>=3.1.40",
    "pydantic>=2.0.0",
]

# Dev dependencies — installed via `uv sync --extra dev` or `pip install -e ".[dev]"`.
# Keeps the runtime install lean (users deploying the MCP server don't need
# test/lint tooling) while making CI/local validation trivial.
[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "bandit>=1.7.0",
    "mypy>=1.10.0",
]

[project.scripts]
overleaf-mcp = "overleaf_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/overleaf_mcp"]

# --- Tool configuration ---------------------------------------------------
# Centralizing tool config in pyproject.toml means contributors need only
# `uv sync --extra dev` to get the same setup CI uses.

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/overleaf_mcp"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
# Exclude defensive branches that are hard to exercise in unit tests.
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
# Conservative default: pyflakes (F) + pycodestyle errors (E) + pyupgrade (UP).
# Expand as the project matures.
select = ["E", "F", "UP", "B", "SIM"]
ignore = [
    "E501",  # line too long (ruff formatter handles this)
]

[tool.mypy]
python_version = "3.10"
# GitPython is unhyped upstream; propagating Any through dispatcher branches
# is unavoidable without wrapper types. Keep mypy honest but don't require
# --strict until the Tier-1 module split lands.
warn_unused_ignores = true
check_untyped_defs = true
ignore_missing_imports = true
